--- a/src/main/webapp/current-egg-count.css
+++ b/src/main/webapp/current-egg-count.css
@@ -4,12 +4,10 @@
     display: grid;
     grid-gap: 10px;
     grid-template-columns: 1;
-    /* sets the height of each row */
-    grid-template-rows: 75px 75px max(768px) 1fr 30px;
+    grid-template-rows: auto
 }
 
 /* Medium Screens */
-
 @media only screen and (min-width: 768px) {
     .form {
         margin: auto;
