--- a/src/main/webapp/current-egg-count.css
+++ b/src/main/webapp/current-egg-count.css
@@ -2,7 +2,7 @@
 
 .form {
     display: grid;
-    grid-gap: 10px;
+    grid-gap: 20px;
     grid-template-columns: 1;
-    grid-template-rows: auto
+    grid-template-rows: auto;
 }
