--- a/src/main/webapp/statistics.css
+++ b/src/main/webapp/statistics.css
@@ -3,3 +3,9 @@
     grid-gap: 20px;
     grid-template-columns: 1fr 1fr;
 }
+
+.info {
+    color: var(--lumo-secondary-text-color);
+    font-family: var(--lumo-font-family);
+    font-size: var(--lumo-font-size-s);
+}
